LRIS-33924 - Fix v-align

--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/license/css/main.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/license/css/main.scss
@@ -44,6 +44,10 @@
 		font-weight: $font-weight-semi-bold;
 	}
 
+	.form-group-inline {
+		vertical-align: initial;
+	}
+
 	.info {
 		font-size: 10px;
 		padding: 10px;
